--- a/style.css
+++ b/style.css
@@ -1,4 +1,8 @@
 /* ======= Global =======  */
+:root {
+    --dark-blue: #363f5f;
+}
+
 *{
     margin: 0;
     padding: 0;
@@ -6,25 +10,118 @@
 }
 
 body {
-    background: #f0f2f5;
+    background: #00f1ff;
     font-family: 'Roboto', sans-serif;
 }
 
+.container{
+    width: min(90vw, 800px);
+    margin: auto;
+}
+
+/* ======= Titles =======  */
+h2 {
+    margin-top: 3.2rem;
+    margin-bottom: 0.8rem;
+    color: var(--dark-blue)
+    font-weight: normal;
+}
+
+/* ======= Header =======  */
 header {
-    background: cadetblue;
-    padding: 2rem 0;
+    background: linear-gradient( #00669a, #00f1ff);
+    padding: 2rem 0 10rem;
     text-align: center;
 }
 
-header h1 {
-  padding: 2rem;
+#logo {
+    color: white;
+    font-size: normal;
 }
 
-
+/* ======= Balance =======  */
 #balance {
-
+    margin-top: -8rem;
 }
 
-.card {
+#balance h2 {
+    color: white;
+    margin-top: 0;
+}
 
+/* =======Cards =======  */
+.card {
+    background: white;
+    padding: 1.5rem 2rem;
+    border-radius: 0.25rem;
+    margin-top: 2rem;
+    color: var(--dark-blue);
+}
+
+.card h3 {
+    font-weight: normal;
+    font-size: 1rem;
+}
+
+.card p {
+    font-size: 2rem;
+    line-height: 3rem;
+    margin-top: 1rem;
+}
+
+.card.total {
+    background: #00a6f3;
+    color: white;
+}
+
+/* ======= Table =======  */
+#data-table {
+    width: 100%; 
+    border-spacing: 0 0.5rem;
+    color: #969cb3;
+}
+
+table thead tr th:first-child,
+table tbody tr td:first-child {
+    border-radius: 0.25rem  0 0 0.25rem;
+}
+
+table thead th {
+    background: white;
+    font-weight: normal;
+    padding: 1rem 2rem;
+    text-align: left;    
+}
+
+table tbody tr {
+    opacity: 0.7;
+}
+
+table tbody tr:hover {
+    opacity: 1;
+}
+
+table tbody td {
+    background: white;
+    padding: 1rem 2rem;
+}
+
+td.description {
+    color: var(--dark-blue);
+}
+
+td.income {
+    color: #12a454
+}
+
+td.expense {
+    color: #e92929;
+}
+
+/* ======= Footer =======  */
+footer {
+    text-align: center;
+    padding: 4rem 0 0 2rem;
+    color: var(--dark-blue);
+    opacity: 0.6;
 }
