--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ body {
 h2 {
     margin-top: 3.2rem;
     margin-bottom: 0.8rem;
-    color: var(--dark-blue)
+    color: var(--dark-blue);
     font-weight: normal;
 }
 
