--- a/style.css
+++ b/style.css
@@ -9,6 +9,10 @@
     box-sizing: border-box;
 }
 
+html {
+    font-size: 93.75%;
+}
+
 body {
     background: #979dac;
     font-family: 'Roboto', sans-serif;
@@ -75,6 +79,12 @@ header {
 }
 
 /* ======= Table =======  */
+#transaction {
+    display: block;
+    width: 100%;
+    overflow-x: auto;
+}
+
 #data-table {
     width: 100%; 
     border-spacing: 0 0.5rem;
@@ -124,4 +134,16 @@ footer {
     padding: 4rem 0 0 2rem;
     color: var(--dark-blue);
     opacity: 0.6;
+}
+
+/* Responsive ===================== */
+@media (min-width: 800px) {
+    html {
+        font-size: 87.5%; 
+    }
+    #balance {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        gap: 2rem;
+    }
 }
