--- a/style.css
+++ b/style.css
@@ -18,6 +18,18 @@ body {
     font-family: 'Roboto', sans-serif;
 }
 
+.sr-only {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    padding: 0;
+    margin: -1px;
+    overflow: hidden;
+    clip: rect( 0, 0, 0, 0);
+    white-space: nowrap;
+    border-width: 0;
+}
+
 .container{
     width: min(90vw, 800px);
     margin: auto;
@@ -65,6 +77,9 @@ header {
 .card h3 {
     font-weight: normal;
     font-size: 1rem;
+
+    display: inline;
+
 }
 
 .card p {
@@ -87,7 +102,7 @@ header {
 
 #data-table {
     width: 100%; 
-    border-spacing: 0 0.5rem;
+    border-spacing: 0rem 0.5rem;
     color: #969cb3;
 }
 
